--- a/ui/src/components/chatbot/Message/Message.styles.css
+++ b/ui/src/components/chatbot/Message/Message.styles.css
@@ -1,17 +1,17 @@
 .bot-speaks-position{
-    float: left;
     padding: 0 15px;
-    background: rgb(29,161,242);
+    background: rgb(255,92,30);
     color: whitesmoke;
+    z-index: 1;
 
 
 }
 
 .user-speaks-position{
-
     float: right;
+    margin: 0 10px 0 0;
     padding: 0 8px;
-    background: rgb(29,161,242);
+    background: rgb(255,92,30);
     color: whitesmoke;
 
 
@@ -20,15 +20,15 @@
 
 .message-panel{
     float: left;
-    margin: 5px 0 0 10px;
-    width: fit-content;
+    margin: 10px 0 40px 10px;
+    width: inherit;
     background: whitesmoke;
     border-radius: 10px;
     height: fit-content;
     padding: 5px 10px;
 }
 .card-style{
-    //border: 1px solid green;
+    display: block;
     padding: 10px;
     height: auto;
 }
