--- a/ui/src/components/chatbot/UI.style.css
+++ b/ui/src/components/chatbot/UI.style.css
@@ -7,23 +7,20 @@
 
 }
 
-
-
 .bot-circle {
     position: fixed;
-    display: none;
     width: 70px;
     height: 70px;
     cursor: pointer;
     bottom: 10px;
     right: 10px;
     border-radius: 50%;
-    background:  rgb(29,161,242);
+    background:  rgb(255,92,30);
     box-shadow: 1px 2px 10px 0 #282c34;
+    z-index: 8;
 }
 
 .robot-icon{
-
     margin: 15px 15px;
     font-size: 2.5em;
     color: #fff;
@@ -34,29 +31,77 @@
     color: #282c34;
 }
 
+::-webkit-scrollbar{
+    width: 0.8em;
+    display: block;
+
+
+}
+::-webkit-scrollbar-track{
+    background: rgb(0,0,0,0.9);
+
+}
+::-webkit-scrollbar-thumb{
+    background: rgb(255,92,30);
+
+}
+::-webkit-scrollbar-thumb:hover{
+    background: rgb(255,92,30,0.7);
+
+}
 
 #conversation-area{
-    background: #282c34;
-    border-radius: 0;
-    width: 100%;
-    height: 80vh;
+    position: fixed;
+    top: 0;
+    background-color: rgb(24,34,59);
+    width: 100vw;
+    height: 100vh;
     transition: 2s ease-in-out;
-}
-.conversation{
-    //border: 1px solid red;
-    width: 100%;
-    height: 60vh;
-    overflow: scroll;
-    overflow-x: hidden;
-    margin: 0;
-    padding: 0;
+    z-index: 10;
 }
 
 .area-border{
+    position: absolute;
     display: flex;
+    top: 0;
+    z-index: 3;
     justify-content: right;
-    width: 100%;
+    border-top-right-radius: 0;
+    width: inherit;
     height: 8vh;
+    background-color: rgb(255,92,30);
+
+}
+.conversation{
+    position: absolute;
+    top: 50px;
+    width: inherit;
+    overflow: auto;
+    overflow-x: hidden;
+    max-height: 90vh;
+    margin: 0;
+    padding: 0;
+}
+.text-area{
+    position: fixed;
+    background-color: #1C1B29;
+    bottom: 0;
+    border-top: 1px solid dimgrey;
+    width: inherit;
+    border-bottom: none;
+    z-index: 5;
+}
+.text-area, input{
+    color: #fff;
+}
+
+.footer{
+    display: block;
+    width: inherit;
+    height: 10vh;
+    color: #fff;
+    margin: 0 auto;
+    text-align: center;
     background-color: rgb(29,161,242);
 
 }
@@ -68,40 +113,12 @@
     color: #282c34;
 }
 
-.text-area{
-    position: absolute;
-    bottom: 42px;
-    width: 100%;
-    height: 6vh;
-
-
-}
-.text-area, input{
-    padding-left: 10px;
-    color: #fff;
-    border-top: 1px solid dimgrey;
-
-
-}
 
 
 
-.footer{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 5vh;
-    color: #fff;
-    margin: 0 auto;
-    text-align: center;
-    background-color: rgb(29,161,242);
-
-}
 
 .footer h5{
-
     font-size: 1rem;
-
 }
 
 .footer span{
@@ -110,15 +127,13 @@
     color: #282c34;
 }
 
-.form-control::placeholder{
+input::placeholder{
     font-size: 1em;
+    color: #fff;
+    padding-left: 10px;
     font-stretch: ultra-expanded;
 }
 
-input{
-    height: 7vh;
-
-}
 
 .form-control:focus{
     box-shadow: none;
@@ -133,94 +148,54 @@ input{
 }
 
 .send-icon:hover{
-    color: rgb(29,161,242);
+    color: rgb(255,92,30);
     cursor: pointer;
 }
 
 @media only screen and  (min-width: 576px) {
-    #conversation-area{
-        background: #282c34;
-        position: absolute;
-        bottom: 10px;
-        left: 10vw;
-        border-radius: 0;
-        width: 90vw;
-        height: 80vh;
-        transition: 2s ease-in-out;
-    }
-
-    .footer h5{
-        font-size: 1rem;
-        margin: 5px 10px;
-    }
-
+   #conversation-area{
+       width: 100vw;
+   }
 
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
     #conversation-area{
-        background: #282c34;
-        position: absolute;
-
-        bottom: 10px;
-        left: 37vw;
+        position: fixed;
+        right: 0;
         border-radius: 0;
         width: 60vw;
-        height: 80vh;
+        height: 100vh;
         transition: 2s ease-in-out;
+    }
+
+    .conversation{
+        position: absolute;
+        top: 50px;
+        width: inherit;
+        overflow: auto;
+        overflow-x: hidden;
+        max-height: 90vh;
+        margin: 0;
+        padding: 0;
     }
 }
 
 @media only screen and (min-width: 992px) {
 
     #conversation-area{
-        background: #282c34;
-        position: absolute;
-        bottom: 10px;
-        left: 58vw;
-        border-radius: 10px;
-        width: 40vw;
-        height: 80vh;
-        transition: 2s ease-in-out;
-    }
-
-    .area-border{
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
+        width: 50vw;
 
     }
 
-    .footer{
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        height: 6vh;
-        color: #fff;
-        background-color: rgb(29,161,242);
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
 
-    }
+
+
 
 }
 
 @media (min-width: 1200px) {
-    #conversation-area{
-        background: #282c34;
-        position: absolute;
-        bottom: 10px;
-        left: 68vw;
-        border-radius: 10px;
-        width: 30vw;
-        height: 80vh;
-        transition: 2s ease-in-out;
-    }
 
-    .area-border{
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
-
-    }
 
     .footer {
         border-bottom-left-radius: 10px;
