--- a/ui/src/components/chatbot/Cards/Card.style.css
+++ b/ui/src/components/chatbot/Cards/Card.style.css
@@ -1,6 +1,7 @@
 .card-style{
     width: 270px;
     padding-right: 30px;
+    margin-bottom: 20px;
 }
 
 
@@ -12,7 +13,6 @@
     float: left;
     padding: 5px 10px;
     margin-bottom: 30px;
-
 
 
 }
@@ -29,9 +29,9 @@
     background: rgb(255,92,30);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    padding: 10px;
+    padding: 5px;
     width: 100%;
-    height: 6vh;
+    height: 7vh;
     color: #fff;
 }
 
@@ -51,27 +51,31 @@
 
 }
 
-.card-content-me, a{
+.card-content-me, button{
     transition: 0.3s ease;
     display: block;
     color: rgb(13,20,45);
+    border-style: none;
     padding: 5px;
     width: 100%;
-    border-radius: 10px;
+    border-radius: 0;
     height: available;
 
 }
 
 .course-content-me a{
-
-    margin-top: 20px;
+    display: block;
+    width: 100%;
+    margin: 17px auto;
+    padding: 10px;
+    color: black;
 
 
 }
 
-.card-content-me a:hover{
+.card-content-me button:hover{
     background: rgb(255,92,30);
-    transform: scale(1.0);
+    transform: scale(1.02);
     display: block;
     color: white;
     margin-bottom: 5px;
@@ -80,7 +84,7 @@
 .course-content-me a:hover{
     background: rgb(255,92,30);
     transform: scale(1.0);
-    display: block;
+    display: flex;
     color: white;
     margin-bottom: 5px;
     width: 100%;
@@ -99,11 +103,11 @@
     float: left;
 }
 
+
 .course-body{
-    width: 43%;
+    width: 100%;
     background-color: #fff;
-    margin-right: 20px;
-    display: inline-block;
+    margin-right: 10px;
     border-radius: 10px;
 
 
@@ -112,7 +116,163 @@
 .course-render-style{
     width: 100%;
     height: 20vh;
-    display: inline-block;
+    margin-top: 10px;
+    display: flex;
     overflow-x: auto;
+
+}
+.course-body{
+    width: 100%;
+}
+
+
+@media only screen and  (min-width: 576px) {
+
+}
+
+@media only screen and (min-width: 600px) {
+    .card-render-bg {
+        margin-bottom: 80px;
+    }
+
+}
+
+@media only screen and (min-width: 992px) {
+    .card-style{
+        width: 270px;
+        padding-right: 30px;
+    }
+
+
+    .card-render-bg{
+        display: inline-block;
+        width: 100%;
+        overflow-x: auto;
+        height: fit-content;
+        float: left;
+        padding: 5px 10px;
+        margin-bottom: 80px;
+
+
+
+    }
+
+    .card-header{
+        background: rgb(255,92,30);
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        padding: 10px;
+        width: 100%;
+        color: #fff;
+    }
+    .course-header{
+        background: rgb(255,92,30);
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        padding: 10px;
+        width: 100%;
+        height: 8vh;
+        color: #fff;
+    }
+
+    .card-content-me{
+        text-align: center;
+
+    }
+    .course-content-me{
+        text-align: center;
+        height: 10vh;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        background-color: #fff;
+    }
+
+    .card-content-me, button{
+        transition: 0.3s ease;
+        display: block;
+        color: rgb(13,20,45);
+        border-style: none;
+        padding: 5px;
+        width: 100%;
+        border-radius: 0;
+        height: available;
+
+    }
+
+    .course-content-me a{
+        display: block;
+        width: 100%;
+        margin: 17px auto;
+        padding: 10px;
+        color: black;
+
+
+    }
+
+    .card-content-me button:hover{
+        background: rgb(255,92,30);
+        transform: scale(1.02);
+        display: block;
+        color: white;
+        margin-bottom: 5px;
+        width: 100%;
+    }
+    .course-content-me a:hover{
+        background: rgb(255,92,30);
+        transform: scale(1.0);
+        display: block;
+        color: white;
+        margin-bottom: 5px;
+        width: 100%;
+    }
+
+    .bot-speaks-card-position{
+        margin-left: 10px;
+        padding: 0 15px;
+        background: rgb(255,92,30);
+        color: whitesmoke;
+    }
+
+    .card-wrap-style{
+        height: 270px;
+        padding-right: 30px;
+        float: left;
+    }
+
+    .course-body{
+        width: 100%;
+        background-color: #fff;
+        margin-right: 20px;
+        border-radius: 10px;
+
+
+    }
+
+    .course-render-style{
+        width: 100%;
+        height: 20vh;
+        margin-top: 10px;
+        display: flex;
+        overflow-y: hidden;
+        overflow-x: auto;
+
+    }
+
+
+
+
+
+
+}
+
+@media (min-width: 1200px) {
+
+
+
+
+}
+
+/* XX-Large devices (larger desktops, 1400px and up)*/
+@media (min-width: 1400px) {
 
 }
